# chatpdf

./: README.md  pyproject.toml
chatpdf/: config.py  indexer.py  repl.py
chatpdf/scripts/: chatpdf.py
tests/: test_chatpdf.py
